services/kubernetes/librespeed/librespeed-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: librespeed
  namespace: librespeed
