services/kubernetes/librespeed/librespeed-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: librespeed-gateway
  namespace: librespeed
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: librespeed-web
  namespace: librespeed
spec:
  parentRefs:
  - name: librespeed-gateway
  hostnames:
    - speed.home.lan
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: librespeed
        port: 80
